 - [web] inserted unseen messages count and mailbox name in browser's window title
 - [web] disable JavaScript theme generation when SOGoUIxDebugEnabled is set to NO
 - [web] added Serbian (sr) translation - thanks to Bogdanović Bojan
 - [web] added sort by arrival date in Mail module (#708)
 - [web] restored "now" line in Calendar module
 - [web] updated CKEditor to version 4.5.11
 - [eas] propagate message submission errors to EAS clients (#3774) 

Bug fixes
 - [eas] properly generate the BusyStatus for normal events
 - [eas] properly escape all email and address fields
 - [eas] properly generate yearly rrule
 - [eas] make sure we don't sleep for too long when EAS processes need interruption
 - [eas] fixed recurring events with timezones for EAS (#3822)
 - [web] restored functionality to save unknown recipient emails to address book on send
 - [web] fixed ripple blocking the form when submitting no values (#3808)
 - [web] fixed error handling when renaming a mailbox
 - [web] handle binary content transfer encoding when displaying mails
 - [web] removed resize grips to short events (#3771)
 - [core] strip protocol value from proxyAddresses attribute (#3182)
 - [core] we now search in all domain sources for Apple Calendar
 - [core] properly handle groups in Apple Calendar's delegation
 - [core] fixed caching expiration of ACLs assigned to LDAP groups (#2867)
 - [core] make sure new cards always have a UID (#3819)
 - [core] fixed default TRANSP value when creating event

3.1.5 (2016-08-10)
------------------

New features
 - [web] drag'n'drop of messages in the Mail module (#3497, #3586, #3734, #3788)
 - [web] drag'n'drop of cards in the AddressBook module
 - [eas] added folder merging capabilities

Enhancements
 - [web] improve action progress when login in or sending a message (#3765, #3761)
 - [web] don't allow to send the message while an upload is in progress
 - [web] notify when successfully copied or moved some messages