@@ -16,6 +16,7 @@ Enhancements
  - [web] added sort by arrival date in Mail module (#708)
  - [web] restored "now" line in Calendar module
  - [web] updated CKEditor to version 4.5.11
+ - [web] allow custom email address to be one of the user's profile (#3551)
  - [eas] propagate message submission errors to EAS clients (#3774) 
 
 Bug fixes
